add error template to mining data

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -115,6 +115,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_activity_excel' %}">Upload Activity Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_mining_excel' %}">Upload Mining Data</a>
+              </li>
             </ul>
           </li>
           {% endif %}
