--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -118,6 +118,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_mining_excel' %}">Upload Mining Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_public_unitillity_excel' %}">Upload Public Utility Data</a>
+              </li>
             </ul>
           </li>
           {% endif %}
