--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -121,6 +121,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_public_unitillity_excel' %}">Upload Public Utility Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_road_excel' %}">Upload Road Data</a>
+              </li>
             </ul>
           </li>
           {% endif %}
