--- a/databank/general_data/templates/general_data/road_templates/road_table.html
+++ b/databank/general_data/templates/general_data/road_templates/road_table.html
@@ -1,5 +1,4 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
 <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -11,19 +10,6 @@
   >
     Filters
 </button>
-</div>
-
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
-
 
 
 <div class="bg-light mt-3">
@@ -124,8 +110,10 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Road Data</div>
-
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'road_table' %}">Road Data</a>
+</div>
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
@@ -175,19 +163,19 @@
               Country
             </th>
             <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
-                Highway_No
+                Highway No
             </th>
             <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
-              Name_Of_The_Road
+              Name Of The Road
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Code_Type_Of_The_Road
+                Code
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Type_Of_The_Road
+                Road Type
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Length_Unit
+                Length Unit
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Length
