--- a/databank/general_data/templates/general_data/activity_templates/activity_table.html
+++ b/databank/general_data/templates/general_data/activity_templates/activity_table.html
@@ -1,21 +1,9 @@
 {% extends 'main.html' %} {% block content %}
 
-<div class="d-flex">
   <button class="btn btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter" aria-expanded="false"
     aria-controls="collapseFilter" style="background-color: #419197;font-size:14px;font-weight: 500; color: white;">
     Filters
   </button>
-</div>
-<div>
-  {% if messages %}
-  {% for m in messages %}
-  <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-    {{m}}
-    <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-  {% endfor %}
-  {% endif %}
-</div>
 
 <div class="bg-light mt-3">
   <div class="collapse shadow rounded-2 " id="collapseFilter">
@@ -41,12 +29,12 @@
           </select>
         </div>
         <div class="form-group col-md-3">
-          <label for="disaster_code">Activity Code</label>
-          <select id="disaster_code" class="form-control" name="disaster_code">
+          <label for="activity_code">Activity Code</label>
+          <select id="activity_code" class="form-control" name="activity_code">
             <option selected>--</option>
             {% for activity_code in activity_codes %}
-            <option value="{{disaster_code.id }}">
-              {{activity_code.Code}} - {{activity_code.activity_Description}}
+            <option value="{{activity_code.id }}">
+              {{activity_code.Code}} - {{activity_code.Description}}
             </option>
             {% endfor %}
           </select>
@@ -73,8 +61,10 @@
   </div>
 </div>
 
-<div class="fs-4 fw-bold text-center">Activity Data</div>
-
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'activity_table' %}">Activity Data</a>
+</div>
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
@@ -120,7 +110,11 @@
             </th>
             <th class=" text-white fst-normal  " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
-              Activity Code
+              Code
+            </th>
+            <th class=" text-white fst-normal  " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
+              Description
             </th>
             <th class=" text-white fst-normal  " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
@@ -132,7 +126,7 @@
             </th>
             <th class=" text-white fst-normal " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
-              Text_Documents_Upload
+              Text Documents Upload
             </th>
             <th class=" text-white fst-normal " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
@@ -148,7 +142,8 @@
             </td>
             <td>{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
-            <td>{{ record.Activity_Code }}</td>
+            <td>{{ record.Activity_Code.Code }}</td>
+            <td>{{ record.Activity_Code.Description }}</td>
             <td>{{ record.Person }}</td>
             <td>{{ record.Districts }}</td>
             <td>{{ record.Text_Documents_Upload}}</td>
