--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -124,6 +124,9 @@
               <li class="nav-item">
                 <a class="dropdown-item" href="{% url 'upload_road_excel' %}">Upload Road Data</a>
               </li>
+              <li class="nav-item">
+                <a class="dropdown-item" href="{% url 'upload_activity_excel' %}">Upload Activity Data</a>
+              </li>
             </ul>
           </li>
           {% endif %}
