--- a/databank/general_data/templates/general_data/education_templates/education_table.html
+++ b/databank/general_data/templates/general_data/education_templates/education_table.html
@@ -124,9 +124,9 @@
                             <input type="checkbox" name="selected_items" class="item-checkbox" value="{{record.id}}" />
                         </td>
 
-                        <td>{{ record.Level_Code }}</td>
+                        <td>{{ record.Level_Code.Code }}</td>
                         <td>{{ record.Level_Code.Level }}</td>
-                        <td>{{ record.Degree_Code }}</td>
+                        <td>{{ record.Degree_Code.Code }}</td>
                         <td>{{ record.Degree_Code.Degree }}</td>
                         <td>{{ record.Male }}</td>
                         <td>{{ record.Female }}</td>
